🩹🩹 more fix for firefox vertical text align

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -49,7 +49,7 @@ header a {
 
 @-moz-document url-prefix() {
     header a {
-        padding-top: 0.3rem;
+        padding-top: 0.35rem;
     }
 }
 
